--- a/app/src/main/res/layout/string_item.xml
+++ b/app/src/main/res/layout/string_item.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:layout_width="match_parent"
-  android:layout_height="50dp"
-  android:orientation="horizontal"
-  android:padding="8dp"
-  android:gravity="center_vertical">
+   xmlns:android="http://schemas.android.com/apk/res/android"
+   xmlns:app="http://schemas.android.com/apk/res-auto"
+   android:layout_height="80dp"
+   android:layout_width="match_parent"
+   android:gravity="center_vertical"
+   android:padding="8dp"
+   android:orientation="horizontal">
 
   <ImageView
-    android:layout_width="25dp"
-    android:layout_height="25dp"
-    android:src="@drawable/ic_xml_attribute" />
+     android:layout_height="30dp"
+     android:layout_width="30dp"
+     android:src="@drawable/ic_xml_attribute" />
 
   <LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginLeft="8dp">
+     android:layout_height="wrap_content"
+     android:layout_width="wrap_content"
+     android:orientation="vertical"
+     android:layout_marginLeft="8dp">
 
     <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="TextView"
-      android:id="@+id/name"
-      android:textStyle="bold"
-      android:textSize="15sp" />
+       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:textSize="20sp"
+       android:text="TextView"
+       android:id="@+id/name"
+       android:textStyle="bold" />
 
     <TextView
-      android:id="@+id/value"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="10sp"
-      android:text="TextView" />
+       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:textSize="15sp"
+       android:id="@+id/value"
+       android:text="TextView" />
 
   </LinearLayout>
+
 </LinearLayout>
