Add support for dragging strings in the list

--- a/app/src/main/res/layout/string_item.xml
+++ b/app/src/main/res/layout/string_item.xml
@@ -2,16 +2,17 @@
 <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
-   android:layout_height="80dp"
+   android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:padding="8dp"
    android:orientation="horizontal">
 
   <ImageView
-     android:layout_height="30dp"
-     android:layout_width="30dp"
-     android:src="@drawable/ic_xml_attribute" />
+    android:id="@+id/icon_drag"
+    android:layout_height="30dp"
+    android:layout_width="30dp"
+    android:src="@drawable/ic_xml_attribute" />
 
   <LinearLayout
      android:layout_height="wrap_content"
