Add possibility to edit the xml

--- a/app/src/main/res/layout/fragment_editor.xml
+++ b/app/src/main/res/layout/fragment_editor.xml
@@ -11,22 +11,28 @@
     android:layout_width="match_parent"
     android:orientation="vertical">
 
-    <com.google.android.material.appbar.AppBarLayout
-      android:id="@+id/app_bar"
-      android:layout_height="wrap_content"
-      android:layout_width="match_parent"
-      android:background="?attr/colorSurface">
-
-      <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent" />
-    </com.google.android.material.appbar.AppBarLayout>
-
     <io.github.rosemoe.sora.widget.CodeEditor
       android:id="@+id/editor"
       android:layout_height="match_parent"
-      android:layout_width="match_parent" />
+      android:layout_width="match_parent"
+      android:layout_weight="1.0" />
+
+    <LinearLayout
+      android:id="@+id/symbol"
+      android:layout_height="40dp"
+      android:layout_width="match_parent"
+      android:orientation="vertical">
+
+      <HorizontalScrollView
+        android:layout_height="40dp"
+        android:layout_width="match_parent">
+
+        <io.github.rosemoe.sora.widget.SymbolInputView
+          android:id="@+id/symbol_input"
+          android:layout_height="40dp"
+          android:layout_width="wrap_content" />
+      </HorizontalScrollView>
+    </LinearLayout>
   </android.widget.LinearLayout>
   
   <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
@@ -35,6 +41,5 @@
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:layout_width="wrap_content"
-    app:icon="@drawable/content_copy"
-    android:text="Copy" />
+    app:icon="@drawable/content_copy" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
