--- a/app/src/main/res/layout/fragment_editor.xml
+++ b/app/src/main/res/layout/fragment_editor.xml
@@ -39,7 +39,9 @@
     android:id="@+id/fab"
     android:layout_gravity="right|bottom"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginBottom="60dp"
     android:layout_width="wrap_content"
+    android:text="Copy"
     app:icon="@drawable/content_copy" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
